fix: overflowing images

--- a/pages/blog/post.module.scss
+++ b/pages/blog/post.module.scss
@@ -33,9 +33,10 @@ article .body {
   }
 
   img {
-    margin: 1em;
+    padding: 1em;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    max-width: 100%;
   }
 
   pre {
